--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<div>
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
-
+<app-nav></app-nav>
+<h1>
+  {{title}}
+</h1>
 <router-outlet></router-outlet>
